--- a/scss/blocks/_choose.scss
+++ b/scss/blocks/_choose.scss
@@ -5,7 +5,8 @@
         flex-direction: column;
         background-color: #2C343E;
         border-radius: 10px;
-        width: 1280px;
+        max-width: 1280px;
+        width: 100%;
         height: 577px;
         position: relative;
         margin-bottom: 351px;
@@ -171,7 +172,8 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            width: 688px;
+            max-width: 688px;
+            width: 100%;
             height: 863px;
             position: relative;
             margin-bottom: 287px;
@@ -344,7 +346,8 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            width: 327px;
+            max-width: 327px;
+            width: 100%;
             height: 902px;
             position: relative;
             margin-bottom: 717px;
