--- a/css/main.css
+++ b/css/main.css
@@ -985,8 +985,7 @@ a {
           flex-direction: column;
   background-color: #2C343E;
   border-radius: 10px;
-  max-width: 1280px;
-  width: 100%;
+  width: 1280px;
   height: 577px;
   position: relative;
   margin-bottom: 351px;
@@ -1175,8 +1174,7 @@ a {
             flex-direction: column;
     background-color: #2C343E;
     border-radius: 10px;
-    max-width: 688px;
-    width: 100%;
+    width: 688px;
     height: 863px;
     position: relative;
     margin-bottom: 287px;
@@ -1348,8 +1346,7 @@ a {
             flex-direction: column;
     background-color: #2C343E;
     border-radius: 10px;
-    max-width: 327px;
-    width: 100%;
+    width: 327px;
     height: 902px;
     position: relative;
     margin-bottom: 717px;
