--- a/scss/blocks/_choose.scss
+++ b/scss/blocks/_choose.scss
@@ -5,8 +5,7 @@
         flex-direction: column;
         background-color: #2C343E;
         border-radius: 10px;
-        max-width: 1280px;
-        width: 100%;
+        width: 1280px;
         height: 577px;
         position: relative;
         margin-bottom: 351px;
@@ -172,8 +171,7 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            max-width: 688px;
-            width: 100%;
+            width: 688px;
             height: 863px;
             position: relative;
             margin-bottom: 287px;
@@ -346,8 +344,7 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            max-width: 327px;
-            width: 100%;
+            width: 327px;
             height: 902px;
             position: relative;
             margin-bottom: 717px;
