--- a/scss/blocks/_cbanner.scss
+++ b/scss/blocks/_cbanner.scss
@@ -79,8 +79,7 @@
         
         &__inner-wrapper {
             background-image: url(./../../images/Bitmap.png);
-            max-width: 689px;
-            width: 100%;
+            width: 689px;
             border-radius: 10px;
             background-size: cover;
             background-position: center;
