--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -95,8 +95,7 @@
         
         &__item {
             display: flex;
-            max-width: 689px;
-            width: 100%;
+            width: 689px;
             -webkit-box-orient: vertical;
             -webkit-box-direction: normal;
             flex-direction: row;
