--- a/css/main.css
+++ b/css/main.css
@@ -623,8 +623,7 @@ a {
   /* TABLET */
   .cbanner__inner-wrapper {
     background-image: url(./../../images/Bitmap.png);
-    max-width: 689px;
-    width: 100%;
+    width: 689px;
     border-radius: 10px;
     background-size: cover;
     background-position: center;
@@ -849,8 +848,7 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    max-width: 689px;
-    width: 100%;
+    width: 689px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
@@ -2503,7 +2501,7 @@ a {
 @media only screen and (max-width: 800px) {
   /* TABLET */
   .footer__container {
-    max-width: 688px;
+    width: 688px;
     background-color: #2C343E;
   }
   .footer__inner-wrapper {
