--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -50,7 +50,7 @@
     .footer {
 
         &__container {
-            max-width: 688px;
+            width: 688px;
             background-color: #2C343E;
         }
     
