--- a/scss/blocks/_cbanner.scss
+++ b/scss/blocks/_cbanner.scss
@@ -146,8 +146,7 @@
         
         &__inner-wrapper {
             background-image: url(./../../images/Bitmap-mob.png);
-            max-width: 327px;
-            width: 100%;
+            width: 327px;
             border-radius: 10px;
             background-size: cover;
             display: flex;
