--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -103,8 +103,7 @@
     .footer {
 
         &__container {
-            max-width: 367px;
-            width: 100%;
+            width: 367px;
             background-color: #2C343E;
         }
     
