--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -3,7 +3,7 @@
     &__container-inner-wrapper {
         display: flex;
         align-items: center;
-        max-width: 1280px;
+        width: 1280px;
         justify-content: space-between;
         margin-top: 43px;
         margin-bottom: 43px;
