--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,9 @@ a {
 @media only screen and (max-width: 800px) {
   /* TABLET */
   .header__container-inner-wrapper {
+    width: 689px;
+  }
+  .header__container-inner-wrapper {
     margin-top: 40px;
     margin-bottom: 53px;
   }
@@ -485,6 +488,9 @@ a {
   /* MOBILE */
   .header {
     position: relative;
+  }
+  .header__container-inner-wrapper {
+    width: 327px;
   }
   .header__container-inner-wrapper {
     display: -webkit-box;
