--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -54,6 +54,10 @@
 
 @media only screen and (max-width: 800px) {
     /* TABLET */
+
+    .header__container-inner-wrapper {
+        width: 689px;
+    }
     
     .header__container-inner-wrapper {
         margin-top: 40px;
@@ -65,6 +69,11 @@
     /* MOBILE */
     
     .header {
+
+        &__container-inner-wrapper {
+            width: 327px;
+        }
+
         position: relative;
         
         &__container-inner-wrapper {
