--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -78,6 +78,8 @@
     
         &__container {
             margin-bottom: 144px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
         
         &__inner-wrapper {
