--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -161,8 +161,8 @@
     .collection {
     
         &__container {
-            padding-left: 20px;
-            padding-right: 20px;
+            margin-left: 20px;
+            margin-right: 20px;
             margin-bottom: 120px;
         }
         
