--- a/css/main.css
+++ b/css/main.css
@@ -854,6 +854,7 @@ a {
     display: -ms-flexbox;
     display: flex;
     width: 689px;
+    margin-left: 80px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
