--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -96,6 +96,7 @@
         &__item {
             display: flex;
             width: 689px;
+            margin-left: 80px;
             -webkit-box-orient: vertical;
             -webkit-box-direction: normal;
             flex-direction: row;
