--- a/scss/blocks/_step.scss
+++ b/scss/blocks/_step.scss
@@ -2,6 +2,7 @@
     
     &__container {
         max-width: 1280px;
+        width: 100%;
         background: #2C343E;
         border-radius: 10px;
         margin-bottom: 159px;
