--- a/scss/blocks/_choose.scss
+++ b/scss/blocks/_choose.scss
@@ -5,7 +5,8 @@
         flex-direction: column;
         background-color: #2C343E;
         border-radius: 10px;
-        width: 1280px;
+        max-width: 1280px;
+        width: 100%;
         height: 577px;
         position: relative;
         margin-bottom: 351px;
@@ -44,14 +45,17 @@
     &__bottom {
         display: inline-block;
         position: absolute;
-        top: calc(100% - 231px);
+        bottom: -151px;
         margin-right: 85px;
-        margin-left: 85px;
+        margin-left: 65px;
     }
 
     &__list {
+        max-width: 1151px;
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
         display: flex;
-        max-width: 1111px;
         justify-content: space-between;
     }
 
@@ -171,7 +175,8 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            width: 688px;
+            max-width: 688px;
+            width: 100%;
             height: 863px;
             position: relative;
             margin-bottom: 287px;
@@ -188,7 +193,8 @@
         }
     
         &__top-heading {
-            width: 264px;
+            max-width: 264px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             font-weight: 900;
@@ -204,7 +210,8 @@
             color: #FEFCF7;
             mix-blend-mode: normal;
             opacity: 0.8;
-            width: 540px;
+            max-width: 540px;
+            width: 100%;
         }
     
         &__bottom {
@@ -218,10 +225,12 @@
         &__list {
             display: inline-block;
             max-width: 573px;
+            width: 100%;
         }
     
         &__bottom-item {
-            width: 573px;
+            max-width: 573px;
+            width: 100%;
             height: 180px;
             background-color: #0E8784;
             border-radius: 8px;
@@ -239,7 +248,8 @@
     
         &__item-heading-1 {
             padding-top: 0px;
-            width: 255px;
+            max-width: 255px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             position: relative;
@@ -256,7 +266,8 @@
             content: "";
             display: inline-block;
             background-image: url(./../../images/bg1.svg);
-            width: 56px;
+            max-width: 56px;
+            width: 100%;
             height: 56px;
             background-size:contain;
             position: absolute;
@@ -268,7 +279,8 @@
         &__item-heading-2 {
             text-align: start;
             padding-top: 0px;
-            width: 255px;
+            max-width: 255px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             position: relative;
@@ -284,7 +296,8 @@
             content: "";
             display: inline-block;
             background-image: url(./../../images/bg2.svg);
-            width: 56px;
+            max-width: 56px;
+            width: 100%;
             height: 56px;
             background-size:contain;
             position: absolute;
@@ -296,7 +309,8 @@
         &__item-heading-3 {
             text-align: start;
             padding-top: 0px;
-            width: 255px;
+            max-width: 255px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             position: relative;
@@ -312,7 +326,8 @@
             content: "";
             display: inline-block;
             background-image: url(./../../images/bg3.svg);
-            width: 56px;
+            max-width: 56px;
+            width: 100%;
             height: 56px;
             background-size:contain;
             position: absolute;
@@ -344,7 +359,8 @@
             flex-direction: column;
             background-color: #2C343E;
             border-radius: 10px;
-            width: 327px;
+            max-width: 327px;
+            width: 100%;
             height: 902px;
             position: relative;
             margin-bottom: 717px;
@@ -361,7 +377,8 @@
         }
     
         &__top-heading {
-            width: 264px;
+            max-width: 264px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             font-weight: 900;
@@ -377,13 +394,14 @@
             color: #FEFCF7;
             mix-blend-mode: normal;
             opacity: 0.8;
-            width: 279px;
+            max-width: 279px;
+            width: 100%;
         }
     
         &__bottom {
             display: inline-block;
             position: absolute;
-            top: calc(375px);
+            top: 375px;
             margin-right: 24px;
             margin-left: 24px;
         }
@@ -441,7 +459,8 @@
         &__item-heading-2 {
             text-align: center;
             padding-top: 0px;
-            width: 255px;
+            max-width: 255px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             position: relative;
@@ -469,7 +488,8 @@
         &__item-heading-3 {
             text-align: center;
             padding-top: 0px;
-            width: 255px;
+            max-width: 255px;
+            width: 100%;
             font-family: 'Fraunces';
             font-style: normal;
             position: relative;
