--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -3,7 +3,8 @@
     &__container-inner-wrapper {
         display: flex;
         align-items: center;
-        width: 1280px;
+        max-width: 1280px;
+        width: 100%;
         justify-content: space-between;
         margin-top: 43px;
         margin-bottom: 43px;
@@ -56,7 +57,8 @@
     /* TABLET */
 
     .header__container-inner-wrapper {
-        width: 689px;
+        max-width: 689px;
+        width: 100%;
     }
     
     .header__container-inner-wrapper {
@@ -71,7 +73,8 @@
     .header {
 
         &__container-inner-wrapper {
-            width: 327px;
+            max-width: 327px;
+            width: 100%;
         }
 
         position: relative;
