--- a/scss/blocks/_works.scss
+++ b/scss/blocks/_works.scss
@@ -233,6 +233,7 @@
     .works {
         &__container {
             max-width: 327px;
+            width: 100%;
             padding-right: 20px;
             padding-left: 20px;
         }
